# az-dashboard

./: .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  README.md  action.yml  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  homebrew-publish.yml  npm-publish.yml  release.yml  vcpkg-publish.yml  winget-publish.yml
cmake/: az-dashboard-config.cmake.in
include/az_dashboard/: analytics.hpp  azure_cli.hpp  cli.hpp  concepts.hpp  history.hpp  models.hpp  render.hpp  report.hpp  subscription_aliases.hpp  windows_command.hpp
packaging/vcpkg/: portfile.cmake.in  vcpkg.json.in
src/: analytics.cpp  azure_cli.cpp  cli.cpp  history.cpp  main.cpp  process_runner.cpp  render.cpp  report.cpp  subscription_aliases.cpp
tests/: analytics_test.cpp  azure_cli_test.cpp  cli_test.cpp  history_test.cpp  process_runner_test.cpp  render_test.cpp  report_test.cpp  subscription_aliases_test.cpp
